--- a/pages/subpages/notice/chat/index.wxml
+++ b/pages/subpages/notice/chat/index.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-  <i-comment class="comment" ontap="blurInput" msgList="{{msgList}}" showInfoList="{{goodsInfo || orderInfo}}" userInfo="{{userInfo}}" friendAvatarUrl="{{friendAvatarUrl}}"/>
+  <i-comment class="comment" bindtap="blurInput" msgList="{{msgList}}" showInfoList="{{goodsInfo || orderInfo}}" userInfo="{{userInfo}}" friendAvatarUrl="{{friendAvatarUrl}}"/>
   <view class="chat-reply" style="padding-bottom: {{containerBottom ? containerBottom + 'px' : 'env(safe-area-inset-bottom)'}};">
     <view class="chat-input-wrap">
       <input 
@@ -13,25 +13,25 @@
         placeholder="打个招呼..." 
         bindconfirm="sendMsg" 
         adjust-position="{{false}}"/>
-      <image class="face-icon" ontap="showEmojiWrap" src="https://img.ubo.vip/mp/news/chat/face-icon.png" />
-      <image class="add-icon" ontap="showMoreOperate" src="https://img.ubo.vip/mp/news/chat/add-icon.png" />
-      <view class="send-btn" ontap="sendMsg">发送</view>
+      <image class="face-icon" bindtap="showEmojiWrap" src="https://img.ubo.vip/mp/news/chat/face-icon.png" />
+      <image class="add-icon" bindtap="showMoreOperate" src="https://img.ubo.vip/mp/news/chat/add-icon.png" />
+      <view class="send-btn" bindtap="sendMsg">发送</view>
     </view>
 
     <view class="emoji-wrap" wx:if="{{emojiWrapVisiabel}}">
-      <view wx:for="{{emojiName}}" class="emoji" wx:key="index" ontap="chooseEmoji" data-emoji="{{item}}">
+      <view wx:for="{{emojiName}}" class="emoji" wx:key="index" bindtap="chooseEmoji" data-emoji="{{item}}">
         <image src="{{emojiUrl + emojiMap[item]}}" style="width:25px;height:25px"/>
       </view>
     </view>
     
     <view class="more-operate" wx:if="{{moreOperateVisiabel}}">
-      <view class="operate-block" ontap="sendPhoto" data-name="camera">
+      <view class="operate-block" bindtap="sendPhoto" data-name="camera">
         <view class="icon-wrap">
           <image style="width: 23px; height: 22px" src="https://img.ubo.vip/mp/news/chat/camera-icon.png" />
         </view>
         <view class="operate-tip">拍照</view>
       </view>
-      <view class="operate-block" ontap="sendPhoto" data-name="album">
+      <view class="operate-block" bindtap="sendPhoto" data-name="album">
         <view class="icon-wrap">
           <image style="width: 23px; height: 23px" src="https://img.ubo.vip/mp/news/chat/album-icon.png" />
         </view>
@@ -51,8 +51,8 @@
           <text style="font-size: 10px;">¥</text>{{goodsInfo.promote_price && goodsInfo.promote_price != '0' ? goodsInfo.promote_price : goodsInfo.shop_price}}
         </view>
         <view class="goods-button">
-          <view class="add-cart" ontap="showSpecModal">加入购物车</view>
-           <view class="seek-btn" ontap="sendCustomMsg" data-type="1">咨询商品</view>
+          <view class="add-cart" bindtap="showSpecPopup">加入购物车</view>
+           <view class="seek-btn" bindtap="sendCustomMsg" data-type="1">咨询商品</view>
         </view>
         
       </view>
@@ -72,12 +72,30 @@
   </view>
   <view class="order-operation">
     <view class="order-status">{{compositeStatus}}</view>
-    <view class="seek-btn" ontap="sendCustomMsg" data-type="2">咨询订单</view>
+    <view class="seek-btn" bindtap="sendCustomMsg" data-type="2">咨询订单</view>
   </view>
 </view>
 
-<!-- 遮罩 -->
-<i-mask wx:if="{{showSpecModal}}" ontap="hideSpecModal"/>
+<spec-popup 
+  show="{{specPopupVisible}}" 
+  mode="{{3}}" 
+  goodsInfo="{{goodsInfo}}" 
+  cartInfo="{{cartInfo}}" 
+  bind:editSpecSuccess="editSpecSuccess" 
+  bind:hide="hideSpecPopup"
+/>
 
-<!-- 商品规格选择弹窗 -->
-<i-spec-modal show="{{showSpecModal}}" actionType="1" goodsId="{{goodsId}}" goodsPic="{{goodsPic}}" basePrice="{{shopPrice}}" totalStock="{{stock}}" mainInfo="{{specData}}" limitTips="{{limitTips}}" limitBuyNum="{{limitBuyNum}}" limitStartBuyNum="{{limitStartBuyNum}}" bind:hideSpecModal="hideSpecModal" />
+<!-- <modal-mask wx:if="{{specPopupVisible}}" bindtap="hideSpecModal"/>
+<spec-popup 
+  show="{{specPopupVisible}}" 
+  actionType="1" 
+  goodsId="{{goodsId}}" 
+  goodsPic="{{goodsPic}}" 
+  basePrice="{{shopPrice}}" 
+  totalStock="{{stock}}" 
+  mainInfo="{{specData}}" 
+  limitTips="{{limitTips}}" 
+  limitBuyNum="{{limitBuyNum}}" 
+  limitStartBuyNum="{{limitStartBuyNum}}" 
+  bind:hideSpecModal="hideSpecModal" 
+/> -->
