--- a/pages/subpages/notice/chat/index.wxss
+++ b/pages/subpages/notice/chat/index.wxss
@@ -2,138 +2,112 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background: #f6f6f6;
 }
+
 .comment {
   position: relative;
   flex: 1;
 }
+
 .chat-reply {
-  background: rgb(253,253,253);
+  padding: 24rpx 0;
+  background: #fff;
 }
 .chat-input-wrap {
-  padding: 0 12px;
   display: flex;
   align-items: center;
-  width: 100%;
-  height: 54px;
-  box-shadow: 0px -1px 0px 0px rgb(230,230,230);
+  margin: 0 24rpx;
+  padding: 0 24rpx;
+  height: 86rpx;
+  background: #f6f6f6;
+  border-radius: 43rpx;
 }
 .chat-input {
-  padding: 0 20px;
   flex: 1;
-  height: 40px;
-  border-radius: 20px;
-  background-color: #F2F2F2;
-  font-size: 14px;
+  height: 86rpx;
+  font-size: 28rpx;
+}
+.face-icon,
+.add-icon {
+  margin-left: 24rpx;
+  width: 52rpx;
+  height: 52rpx;
 }
 
-.face-icon, .add-icon {
-  width: 34px;
-  height: 34px;
-}
-.face-icon {
-  margin-left: 12px;
-}
-.add-icon {
-  margin-left: 16px;
-}
 .emoji-wrap {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   overflow-x: scroll;
-  height: 150px;
-  width: 100%;
-  box-shadow: 0px -1px 0px 0px rgb(230,230,230);
+  height: 400rpx;
 }
-.emoji { 
+.emoji {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
+  width: 100rpx;
+  height: 100rpx;
 }
 .emoji-tab {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 50px;
-  background-color: #F2F2F2;
+  height: 100rpx;
+  background-color: #f2f2f2;
 }
 .emoji-tips {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
-  font-size: 18px;
-  background-color: rgb(253,253,253);
+  width: 100rpx;
+  height: 100rpx;
+  font-size: 36rpx;
+  background-color: rgb(253, 253, 253);
 }
-.send-btn {
-  margin-left: 16px;
-  width: 80px;
-  height: 40px;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 500;
-  text-align: center;
-  line-height: 40px;
-  border-radius: 3px;
-  background: linear-gradient(135deg,rgba(255,191,210,1) 0%,rgba(254,25,77,1) 100%);
-}
+
 .more-operate {
   display: flex;
   align-items: center;
-  height: 88px;
-}
-.operate-block {
-  margin: 0 12px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 54rpx 32rpx;
 }
 .icon-wrap {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 4px;
-  background-color: #CBCBCB;
-}
-.operate-tip {
-  margin-top: 5px;
-  font-size: 13px;
-  color: #666;
-  font-weight: 500;
+  margin-right: 54rpx;
+  width: 140rpx;
+  height: 140rpx;
+  background-color: #f6f6f6;
+  border-radius: 46rpx;
 }
 
-.goods-list, .order-list {
+.goods-list,
+.order-list {
   display: flex;
-  /* align-items: center; */
   position: fixed;
   left: 50%;
-  padding: 6px;
+  padding: 12rpx;
   width: 95%;
-  height: 80px;
-  border-radius: 4px;
+  height: 160rpx;
+  border-radius: 8rpx;
   background-color: #fff;
   transform: translateX(-50%);
 }
-.goods-img{
-  height:68px;
-  width:68px;
-  border-radius: 4px;
+.goods-img {
+  height: 136rpx;
+  width: 136rpx;
+  border-radius: 8rpx;
 }
-.goods-detail{
-  flex:1;
+.goods-detail {
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-left:8px;
+  padding-left: 16rpx;
 }
-.goods-detail .goods-price{
-  color:#EAAB63;
+.goods-detail .goods-price {
+  color: #eaab63;
 }
 .operation-wrap {
   display: flex;
@@ -141,29 +115,19 @@
   justify-content: space-between;
   align-items: center;
 }
-.add-cart {
-  width: 78px;
-  height: 24px;
-  border-radius: 12px;
-  border: 1px solid rgba(254,29,80,1);
-  font-size: 12px;
-  color: #FE1F52;
-  text-align: center;
-  line-height: 24px;
-  display: inline-block;
-}
-
 .seek-btn {
-  margin-left: 8px;
-  width: 68px;
-  height: 24px;
-  background: linear-gradient(135deg,rgba(255,128,164,1) 0%,rgba(254,25,77,1) 100%);
-  border-radius: 12px;
-  text-align: center;
-  line-height: 24px;
-  font-size: 12px;
+  width: 136rpx;
+  height: 48rpx;
   color: #fff;
-  display: inline-block;
+  font-size: 24rpx;
+  text-align: center;
+  line-height: 48rpx;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 128, 164, 1) 0%,
+    rgba(254, 25, 77, 1) 100%
+  );
+  border-radius: 24rpx;
 }
 
 .order-operation {
@@ -175,7 +139,7 @@
 }
 
 .order-status {
-  font-size: 13px;
+  color: #e93c65;
+  font-size: 26rpx;
   font-weight: 500;
-  color: #E93C65;
 }
