--- a/pages/subpages/notice/chat/components/comment-list/index.wxml
+++ b/pages/subpages/notice/chat/components/comment-list/index.wxml
@@ -1,7 +1,7 @@
 <wxs module="TIME" src="../../../../../../utils/filters/time.wxs" />
 
 <scroll-view class="comment" scroll-top="{{scrollTop}}" scroll-y="true" bind:touchstart="onTouchStart" bind:touchend="onTouchEnd">
-  <view class="msg-lists {{showInfoList ? 'show-info-list' : ''}}">
+  <view class="msg-lists">
     <view class="msg-list" wx:for="{{contactList}}" wx:key="index">
       <view class="datetime" wx:if="{{item.time}}">{{TIME.getDateDiff(item.time)}}</view>
       <view class="message-detail {{item.flow === 'out' ? 'mine' : ''}}">
