--- a/pages/subpages/notice/chat/index.wxss
+++ b/pages/subpages/notice/chat/index.wxss
@@ -5,6 +5,39 @@
   background: #f6f6f6;
 }
 
+.header {
+  display: flex;
+  padding-left: 8px;
+  padding-right: 40px;
+  padding-bottom: 8px;
+  background: #fff;
+  border-radius: 0px 0px 20px 20px;
+}
+.back-icon-wrap {
+  display: flex;
+  align-items: center;
+  height: 44px;
+  width: 32px;
+}
+.friend-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 6px;
+  flex: 1;
+}
+.friend-avatar {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+}
+.friend-name {
+  margin-top: 5px;
+  color: #141925;
+  font-size: 13px;
+  font-weight: 500;
+}
+
 .goods-list, .order-list {
   display: flex;
   margin: 24rpx;
