--- a/pages/tab-bar-pages/notice/index.wxss
+++ b/pages/tab-bar-pages/notice/index.wxss
@@ -81,7 +81,7 @@
   align-items: center;
   padding: 24rpx;
   width: 100%;
-  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
 }
 .news-list-icon {
   margin-right: 18rpx;
