--- a/pages/subpages/mall/goods/subpages/cart/index.wxss
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxss
@@ -88,7 +88,7 @@
   color: #FD0B0A;
   font-size: 28rpx;
   border-radius: 30rpx;
-  border: 2rpx solid #FD0B0A;
+  border: 1px solid #FD0B0A;
 }
 
 .wrap {
@@ -211,19 +211,19 @@
 .reset-spec-btn {
   width: 110rpx;
   height: 46rpx;
-  color: #FD0807;
+  color: #FD2D55;
   font-size: 24rpx;
   text-align: center;
   line-height: 42rpx;
   border-radius: 23rpx;
-  border: 2rpx solid #FD0807;
+  border: 1px solid #FD2D55;
 }
 .swipe-cell-delete-btn {
   width: 65px;
   height: 100%;
   color: #fff;
   font-size: 28rpx;
-  background: #FD0807;
+  background: #FD2D55;
 }
 
 .recommend-goods-wrap {
