--- a/pages/subpages/mall/goods/subpages/order-check/components/pickup-time-popup/index.wxss
+++ b/pages/subpages/mall/goods/subpages/order-check/components/pickup-time-popup/index.wxss
@@ -49,7 +49,7 @@
   font-size: 20rpx;
   line-height: 1;
   border-radius: 8rpx;
-  border: 2rpx solid var(--blue-1);
+  border: 1px solid var(--blue-1);
 }
 .address-detail {
   margin-top: 16rpx;
