--- a/pages/subpages/mine/address/index.wxss
+++ b/pages/subpages/mine/address/index.wxss
@@ -33,7 +33,7 @@
   font-size: 20rpx;
   line-height: 1;
   border-radius: 8rpx;
-  border: 2rpx solid var(--blue-1);
+  border: 1px solid var(--blue-1);
 }
 .address-detail {
   margin-top: 16rpx;
@@ -46,7 +46,7 @@
   height: 100%;
   color: #fff;
   font-size: 28rpx;
-  background: #FD0807;
+  background: #FD2D55;
 }
 
 .add-btn {
