--- a/pages/subpages/notice/chat/components/comment-list/index.wxss
+++ b/pages/subpages/notice/chat/components/comment-list/index.wxss
@@ -4,20 +4,20 @@
   overflow: scroll;
 }
 .msg-list {
-  margin: 0 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 24rpx;
 }
 .datetime {
   margin-top: 24rpx;
-  padding: 0 14px;
-  height: 24px;
-  font-size: 12px;
+  padding: 0 24rpx;
+  height: 48rpx;
   color: #666;
-  line-height: 24px;
-  border-radius: 16px;
+  font-size: 22rpx;
+  line-height: 48rpx;
   background: #fff;
+  border-radius: 24rpx;
 }
 .message-detail {
   display: flex;
@@ -38,61 +38,59 @@
 }
 .content {
   position: relative;
-  margin: 0px 126rpx 40rpx 16rpx;  
-  padding: 10px;
+  margin: 0 100rpx 40rpx 16rpx;  
+  padding: 24rpx;
   color: #262626;
-  font-size: 14px;
-  line-height: 22px;
+  font-size: 28rpx;
+  line-height: 44rpx;
   background-color: #fff;
   border-radius: 16rpx;
 }
 .content.mine {
-  margin: 0 16rpx 40rpx 126rpx;
+  margin: 0 16rpx 40rpx 100rpx;
   color: #fff;
   background-color: #1F85FE;
 }
 .content.complex {
-  padding: 24rpx;
+  line-height: normal;
   background: #fff;
 }
 .goods, .order {
   display: flex;
   align-items: center;
-  width: 245px; 
-  height: 70px;
 }
 .goods-img {
-  margin-right: 8px;
-  width: 68px;
-  height: 68px;
-  border-radius: 4px;
+  margin-right: 24rpx;
+  width: 124rpx;
+  height: 124rpx;
+  border-radius: 12rpx;
 }
 .goods-detail, .order-detail {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex: 1;
-  height: 100%;
+  height: 124rpx;
 }
 .order-num {
   display: flex;
   align-items: center;
-  font-size: 12px;
-  font-weight: 500;
   color: #666;
+  font-size: 24rpx;
+  font-weight: 500;
   white-space: nowrap;
 }
 .order-num-tip {
-  margin-right: 3px;
-  padding: 0 2px;
-  width: 36px;
-  height: 14px;
-  background-color: #8E8E8E;
-  text-align: center;
-  line-height: 14px;
-  font-size: 9px;
+  margin-right: 6rpx;
+  padding: 0 4rpx;
+  width: 72rpx;
+  height: 28rpx;
   color: #fff;
-  border-radius: 2px;
+  font-size: 18rpx;
+  text-align: center;
+  line-height: 28rpx;
+  background: #8E8E8E;
+  border-radius: 4rpx;
 }
 .goods-name {
   display: -webkit-box;
@@ -101,24 +99,25 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   color: #333;
+  font-size: 28rpx;
+  font-weight: bold;
+}
+.goods-price {
+  color: #FD2D55;
+  font-size: 32rpx;
+  font-weight: 500;
+  text-align: right;
+}
+.consignee {
+  padding-top: 10rpx;
+  flex: 1;
+  color: #666;
   font-size: 26rpx;
   font-weight: 500;
 }
-.goods-price {
-  font-size: 14px;
-  font-weight: 500;
-  color: #FD2D55;
-}
-.consignee {
-  padding-top: 5px;
-  flex: 1;
-  font-size: 13px;
-  font-weight: 500;
-  color: #666;
-}
 .order-time {
-  font-size: 11px;
   color: #999;
+  font-size: 22rpx;
   font-weight: 500;
   line-height: 1;
   white-space: nowrap;
