--- a/pages/subpages/notice/chat/components/comment-list/index.wxml
+++ b/pages/subpages/notice/chat/components/comment-list/index.wxml
@@ -12,11 +12,14 @@
             <image wx:if="{{_item.type === 'emoji'}}" src="{{_item.value}}" style="width:20px;height:20px;vertical-align: top;"/>
           </block>
           <image wx:if="{{item.content.type === 'img'}}" style="max-width: 82px; max-height: 114px;" mode="aspectFit" src="{{item.content.value}}" />
-          <view wx:if="{{item.content.type === 'goods'}}" class="goods" bindtap="checkGoods" data-id="{{item.content.value.id}}">
-            <image class="goods-img" src="{{item.content.value.cover}}" mode="aspectFit" />
-            <view class="goods-detail">
-              <view class="goods-name">{{item.content.value.name}}</view>
-              <view class="goods-price">
+          <view wx:if="{{item.content.type === 'product'}}" class="product" bindtap="checkProduct" data-id="{{item.content.value.type}}" data-id="{{item.content.value.id}}">
+            <view class="product-cover-wrap">
+              <image class="product-cover" src="{{item.content.value.cover}}" mode="aspectFit" />
+              <view class="product-type">{{['景点', '酒店', '美食', '商品'][item.content.value.type - 1]}}</view>
+            </view>
+            <view class="product-detail">
+              <view class="product-name">{{item.content.value.name}}</view>
+              <view class="product-price">
                 <text style="font-size: 10px;">¥</text>
                 <text>{{item.content.value.price}}</text>
               </view>
