--- a/pages/subpages/notice/chat/components/comment-list/index.wxss
+++ b/pages/subpages/notice/chat/components/comment-list/index.wxss
@@ -55,17 +55,34 @@
   line-height: normal;
   background: #fff;
 }
-.goods, .order {
+.product, .order {
   display: flex;
   align-items: center;
 }
-.goods-img {
+.product-cover-wrap {
+  position: relative;
   margin-right: 24rpx;
+  width: 124rpx;
+  height: 124rpx;
+  font-size: 0;
+}
+.product-cover {
   width: 124rpx;
   height: 124rpx;
   border-radius: 12rpx;
 }
-.goods-detail, .order-detail {
+.product-type {
+  position: absolute;
+  top: 18rpx;
+  right: 18rpx;
+  padding: 0 12rpx;
+  height: 36rpx;
+  color: #000;
+  font-size: 18rpx;
+  border-radius: 18rpx;
+  background: rgba(255, 255, 255, 0.8);
+}
+.product-detail, .order-detail {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -92,7 +109,7 @@
   background: #8E8E8E;
   border-radius: 4rpx;
 }
-.goods-name {
+.product-name {
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -102,7 +119,7 @@
   font-size: 28rpx;
   font-weight: bold;
 }
-.goods-price {
+.product-price {
   color: #FD2D55;
   font-size: 32rpx;
   font-weight: 500;
