--- a/pages/subpages/notice/chat/index.wxml
+++ b/pages/subpages/notice/chat/index.wxml
@@ -10,13 +10,16 @@
   </view>
 
   <!-- 商品 -->
-  <view class="goods-list" wx:if="{{goodsInfo}}" style="top: 10px">
-    <image class="goods-img" src="{{goodsInfo.cover}}" mode="aspectFit" />
-    <view class="goods-detail">
-      <view class="goods-name omit">{{goodsInfo.name}}</view>
+  <view class="product-list" wx:if="{{productInfo}}" style="top: 10px">
+    <view class="product-cover-wrap">
+      <image class="product-cover" src="{{productInfo.cover}}" mode="aspectFit" />
+      <view class="product-type">{{['景点', '酒店', '美食', '商品'][productInfo.type - 1]}}</view>
+    </view>
+    <view class="product-detail">
+      <view class="product-name omit">{{productInfo.name}}</view>
       <view class="operation-wrap">
-        <view class="goods-price">
-          <text style="font-size: 10px;">¥</text>{{goodsInfo.price}}
+        <view class="product-price">
+          <text style="font-size: 10px;">¥</text>{{productInfo.price}}
         </view>
         <view class="seek-btn" bindtap="sendCustomMsg" data-type="1">咨询商品</view>
       </view>
@@ -25,7 +28,7 @@
 
   <!-- 订单 -->
   <view class="order-list" wx:if="{{orderInfo}}" style="top: {{statusBarHeight + 55}}px">
-    <image class="goods-img" src="{{orderInfo.goodsList[0].goods_thumb}}" mode="aspectFit" />
+    <image class="product-cover" src="{{orderInfo.goodsList[0].goods_thumb}}" mode="aspectFit" />
     <view class="order-detail">
       <view class="order-num">
         <view class="order-num-tip">订单号</view>
