--- a/pages/subpages/notice/chat/components/comment-list/index.wxss
+++ b/pages/subpages/notice/chat/components/comment-list/index.wxss
@@ -73,8 +73,10 @@
 }
 .product-type {
   position: absolute;
-  top: 18rpx;
-  right: 18rpx;
+  top: 12rpx;
+  right: 12rpx;
+  display: flex;
+  align-items: center;
   padding: 0 12rpx;
   height: 36rpx;
   color: #000;
