--- a/pages/subpages/notice/chat/index.wxml
+++ b/pages/subpages/notice/chat/index.wxml
@@ -12,7 +12,7 @@
   <!-- 商品 -->
   <view class="product-list" wx:if="{{productInfo}}" style="top: 10px">
     <view class="product-cover-wrap">
-      <image class="product-cover" src="{{productInfo.cover}}" mode="aspectFit" />
+      <image class="product-cover" src="{{productInfo.cover}}" mode="aspectFill" />
       <view class="product-type">{{['景点', '酒店', '美食', '商品'][productInfo.type - 1]}}</view>
     </view>
     <view class="product-detail">
@@ -21,14 +21,14 @@
         <view class="product-price">
           <text style="font-size: 10px;">¥</text>{{productInfo.price}}
         </view>
-        <view class="seek-btn" bindtap="sendCustomMsg" data-type="1">咨询商品</view>
+        <view class="seek-btn" bindtap="sendCustomMsg" data-type="{{1}}">咨询商品</view>
       </view>
     </view>
   </view>
 
   <!-- 订单 -->
   <view class="order-list" wx:if="{{orderInfo}}" style="top: {{statusBarHeight + 55}}px">
-    <image class="product-cover" src="{{orderInfo.goodsList[0].goods_thumb}}" mode="aspectFit" />
+    <image class="product-cover" src="{{orderInfo.goodsList[0].goods_thumb}}" mode="aspectFill" />
     <view class="order-detail">
       <view class="order-num">
         <view class="order-num-tip">订单号</view>
@@ -39,7 +39,7 @@
     </view>
     <view class="order-operation">
       <view class="order-status">{{compositeStatus}}</view>
-      <view class="seek-btn" bindtap="sendCustomMsg" data-type="2">咨询订单</view>
+      <view class="seek-btn" bindtap="sendCustomMsg" data-type="{{1}}">咨询订单</view>
     </view>
   </view>
 
