--- a/pages/subpages/notice/chat/index.wxss
+++ b/pages/subpages/notice/chat/index.wxss
@@ -58,8 +58,10 @@
 }
 .product-type {
   position: absolute;
-  top: 18rpx;
-  right: 18rpx;
+  top: 12rpx;
+  right: 12rpx;
+  display: flex;
+  align-items: center;
   padding: 0 12rpx;
   height: 36rpx;
   color: #000;
@@ -76,6 +78,7 @@
 }
 .product-detail .product-price {
   color: #FD2D55;
+  font-weight: 500;
 }
 .product-name {
   color: #333;
